--- a/src/assets/style/App.scss
+++ b/src/assets/style/App.scss
@@ -155,15 +155,43 @@ body {
       height: 100%;
       margin: auto;
       box-sizing: border-box;
-      padding: 5rem 0rem;
+      padding: 9rem 0rem;
       flex-direction: column;
       align-items: center;
       justify-content: center;
       overflow: visible;
-      // border: 1px solid green;
+      // border: 5px solid purple;
+
+      #container {
+        pointer-events: auto;
+        width: 75%;
+        height: 70%;
+        display: flex;
+        align-items: center;
+        justify-items: center;
+        justify-content: space-around;
+        overflow: visible;
+        // border: 1px solid white;
+        // box-sizing: content-box;
+
+        svg {
+          overflow: visible;
+
+          &.fill {
+            stroke: none;
+            fill: white;
+          }
+          &.stroke {
+            fill: none;
+            stroke: white;
+            stroke-opacity: 1;
+            stroke-width: 5px;
+            stroke-miterlimit: 1rem;
+          }
+        }
+      }
 
       #nameContainer {
-        // border: 1px solid white;
         width: 100%;
         height: auto;
         display: flex;
@@ -175,15 +203,12 @@ body {
           display: flex;
           flex-direction: column;
           // border: 1px solid red;
-          padding-bottom: 7rem;
+          // padding-bottom: 7rem;
           // overflow: hidden;
 
           div {
             display: flex;
             flex-direction: column;
-            // align-items: center;
-            align-content: flex-start;
-            justify-content: flex-start;
             padding: 0rem 1rem;
             // border: 1px solid green;
 
@@ -216,33 +241,6 @@ body {
             opacity: 0;
           }
         }
-      }
-    }
-    button {
-      all: unset;
-    }
-
-    #container {
-      pointer-events: auto;
-      width: 75%;
-      height: 70%;
-      display: flex;
-      align-items: center;
-      justify-items: center;
-      justify-content: space-around;
-      overflow: visible;
-      // border: 1px solid white;
-      // box-sizing: content-box;
-
-      svg {
-        fill: white;
-        // stroke: white;
-        overflow: visible;
-
-        // &:hover {
-        //   fill: green;
-        //   stroke: white;
-        // }
       }
     }
   }
